--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -22,16 +22,16 @@
     {% endif %}
     {% if post.date %}<p style="display:inline" class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {{
       post.date | date: '%B %d, %Y' }}</p>{% endif %}
-    <h2 style="display:inline" class="archive__item-title" itemprop="headline">
+    <h3 style="display:inline" class="archive__item-title" itemprop="headline">
       {% if post.link %}
       <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i
           class="fa fa-link" aria-hidden="true" title="permalink"></i><span class="sr-only">Permalink</span></a>
       {% else %}
       <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
       {% endif %}
-    </h2>
+    </h3>
     {% if post.read_time %}
-    <p style="display:inline" class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> ({% include read-time.html %})</p>
+    <p style="display:inline" class="page__meta"><i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
     {% endif %}
     {% if post.venue %}<p class="archive__item-excerpt" itemprop="description">{{post.type}}, {{ post.venue }},
       {{post.location}} {% endif %}
