--- a/_includes/archive-single-talk.html
+++ b/_includes/archive-single-talk.html
@@ -20,8 +20,11 @@
         base_path }}" {% endif %} alt="">
     </div>
     {% endif %}
-    {% if post.date %}<p style="display:inline" class="page__meta"><i class="fa fa-clock-o" aria-hidden="true"></i> {{
-      post.date | date: '%B %d, %Y' }}</p>{% endif %}
+    {% if post.modified %}<p style="display:inline" class="page__meta"><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{
+      post.modified | date: '%B %d, %Y' }}</p>
+    {% elsif post.date %}<p style="display:inline" class="page__meta"><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{
+      post.date | date: '%B %d, %Y' }}</p>
+    {% endif %}
     <h3 style="display:inline" class="archive__item-title" itemprop="headline">
       {% if post.link %}
       <a href="{{ post.link }}">{{ title }}</a> <a href="{{ base_path }}{{ post.url }}" rel="permalink"><i
