--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -34,13 +34,29 @@ layout: default
       <header>
         {% if page.title %}<h1 class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" |
             remove: "</p>" }}</h1>{% endif %}
-        {% if page.read_time and page.date %}
+        {% if page.read_time and page.date and page.modified %}
         <p style="display:inline" class="page__meta">
           <strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i>
             {{
             site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time
             datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y"
-            }}</time> : <i class="fa fa-clock" aria-hidden="true"></i> ({% include read-time.html %})
+            }}</time>
+        <br>
+        <strong><i class="fa fa-pen" aria-hidden="true"></i> {{
+          site.data.ui-text[site.locale].modify_label | default: "Updated:" }}</strong> <time
+          datetime="{{ page.modified | date: " %Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time>
+        <br>
+        <i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}
+        </p>
+        {% elsif page.read_time and page.date %}
+        <p style="display:inline" class="page__meta">
+          <strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i>
+            {{
+            site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time
+            datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y"
+            }}</time> 
+          <br>
+          <i class="fa fa-clock" aria-hidden="true"></i> {% include read-time.html %}
         </p>
         {% endif %}
         {% if page.collection == 'teaching' %}
@@ -48,11 +64,11 @@ layout: default
         {% elsif page.venue and page.date %}
         <p>Published in <i>{{ page.venue }}</i>, {{ page.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% endif %}
-        {% if page.modified %}
+        <!-- {% if page.modified %}
         <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{
-            site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time
+            site.data.ui-text[site.locale].date_label | default: "Modified:" }}</strong> <time
             datetime="{{ page.modified | date: " %Y-%m-%d" }}">{{ page.modified | date: "%B %d, %Y" }}</time></p>
-        {% endif %}
+        {% endif %} -->
 
 
 
